Agregando streaming player

--- a/source/index.html
+++ b/source/index.html
@@ -41,39 +41,8 @@
 
 
                             <div class="serviciosDescripcion">
-                                <p>
-Ademas el hotel ofrece los siguientes servicios:<br/>
-<br/>
-- Piscina<br/>
-- Bar las 24 hs<br/>
-- Quincho con parrilla<br/>
-- Gym<br/>
-- Box privado de internet<br/>
-                                </p>
+                                <script src="//myradiostream.com/webplayer/517497.js"></script>
                             </div>
-
-                            <div class="serviciosImagenes">
-                                <img class="servicio-active-image servicio-image" id="barImagen" src="http://imagizer.imageshack.us/a/img537/1292/mVpwKT.jpg">
-                                <img class="servicio-image" id="piletaImagen" src="http://imagizer.imageshack.us/a/img538/1959/Z1atXZ.jpg">
-                                <img class="servicio-image" id="quinchoImagen" src="http://imagizer.imageshack.us/a/img908/3221/O30XtW.jpg">
-                                <img class="servicio-image" id="quincho2Imagen" src="http://imagizer.imageshack.us/a/img540/8103/TRUJcD.jpg">
-                                <img class="servicio-image" id="gymImagen" src="http://imagizer.imageshack.us/a/img538/9018/Thpbkh.jpg">
-                            </div>
-
-                            <div class="slider-nav">
-                                <a href="#" class="arrow-prev"><img src="http://s3.amazonaws.com/codecademy-content/courses/ltp2/img/flipboard/arrow-prev.png"></a>
-
-                                <ul class="slider-dots">
-                                    <li class="dot active-dot">&bull;</li>
-                                    <li class="dot">&bull;</li>
-                                    <li class="dot">&bull;</li>
-                                    <li class="dot">&bull;</li>
-                                    <li class="dot">&bull;</li>
-                                </ul>
-
-                                <a href="#" class="arrow-next"><img src="http://s3.amazonaws.com/codecademy-content/courses/ltp2/img/flipboard/arrow-next.png"></a>
-                            </div>
-
                     </div>
                 </div>
             </div>
@@ -88,7 +57,6 @@ Ademas el hotel ofrece los siguientes servicios:<br/>
                 </div>
             </div>
         </div>
-</div>
 
 <div class="nav">
     <div class="container">
@@ -103,7 +71,7 @@ Ademas el hotel ofrece los siguientes servicios:<br/>
                 <li><a href="#">|</a></li>
                 <li><a id="sumLink" href="#">Eventos</a></li>
                 <li><a href="#">|</a></li>
-                <li><a id="serviciosLink" href="#">Servicios</a></li>
+                <li><a id="serviciosLink" href="#">Radio</a></li>
             </ul>
 
             <ul class="pull-right">
