--- a/source/index.html
+++ b/source/index.html
@@ -52,7 +52,7 @@
             <div class="jumbotron" id="ubicacion">
                 <div class="container">
 
-                    <iframe id="ubicacionMapa" width="600" height="450" frameborder="0" style="border:0" src="https://www.google.com/maps/embed/v1/place?q=Hotel%20Col%C3%B3n%20-%20Col%C3%B3n%2C%20Jun%C3%ADn%2C%20Buenos%20Aires%2C%20Argentina&key=AIzaSyANDvMLlwfAKmXZdgWwWegwVpddRwCl7B8&zoom=15&center=-34.587637,-60.953084"></iframe>
+                    <iframe id="ubicacionMapa" width="600" height="450" frameborder="0" style="border:0" src="https://www.google.com/maps/dir//-34.5042524,-60.8608633/@-34.5041875,-60.8619292,424m/data=!3m1!1e3"></iframe>
 
                 </div>
             </div>
