--- a/source/index.html
+++ b/source/index.html
@@ -52,7 +52,7 @@
             <div class="jumbotron" id="ubicacion">
                 <div class="container">
 
-                    <iframe id="ubicacionMapa" width="600" height="450" frameborder="0" style="border:0" src="https://www.google.com/maps/dir//-34.5042524,-60.8608633/@-34.5041875,-60.8619292,424m/data=!3m1!1e3"></iframe>
+                    <iframe id="ubicacionMapa" width="600" height="450" frameborder="0" style="border:0" src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d3228.0091676781954!2d-60.86303968481649!3d-34.504258980485446!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x0%3A0x0!2zMzTCsDMwJzE1LjMiUyA2MMKwNTEnMzkuMSJX!5e1!3m2!1ses!2sus!4v1498500220307" width="600" height="450" frameborder="0" style="border:0" allowfullscreen></iframe>
 
                 </div>
             </div>
