--- a/source/index.html
+++ b/source/index.html
@@ -16,7 +16,9 @@
 <div class="slider">
         <div class="slide active-slide" id="homeSlider">
                 <div class="jumbotron" id="home">
-
+                    <div class="homeLogo">
+                        <img id="imagenPortada" src="mediopelo-logo.png"/>
+                    </div>
                 </div>
             </div>
 
@@ -31,6 +33,18 @@
                         <input type="submit" class="btn btn-primary" value="Enviar">
                     </div>
                 </form>
+            </div>
+        </div>
+
+        <div class="slide" id="sumSlider">
+            <div class="jumbotron" id="sum">
+
+            </div>
+        </div>
+
+        <div class="slide" id="habitacionesSlider">
+            <div class="jumbotron" id="habitaciones">
+
             </div>
         </div>
 
