--- a/source/index.html
+++ b/source/index.html
@@ -36,25 +36,25 @@
             </div>
         </div>
 
-        <div class="slide" id="sumSlider">
-            <div class="jumbotron" id="sum">
+        <div class="slide" id="eventsSlider">
+            <div class="jumbotron" id="events">
 
             </div>
         </div>
 
-        <div class="slide" id="habitacionesSlider">
-            <div class="jumbotron" id="habitaciones">
+        <div class="slide" id="bandasSlider">
+            <div class="jumbotron" id="bandas">
 
             </div>
         </div>
 
-        <div class="slide" id="serviciosSlider">
-            <div class="jumbotron" id="servicios">
+        <div class="slide" id="radioSlider">
+            <div class="jumbotron" id="radio">
                 <div class="container">
-                    <div class="contenidoServicios">
+                    <div class="contenidoRadio">
 
 
-                            <div class="serviciosDescripcion">
+                            <div class="radioDescripcion">
                                 <script src="//myradiostream.com/webplayer/517497.js"></script>
                             </div>
                     </div>
@@ -81,11 +81,11 @@
             <ul class="pull-left">
                 <li><a id="homeLink" href="#">Home</a></li>
                 <li><a href="#">|</a></li>
-                <li><a id="habitacionesLink" href="#">Sessions</a></li>
+                <li><a id="bandasLink" href="#">Bands</a></li>
                 <li><a href="#">|</a></li>
-                <li><a id="sumLink" href="#">Eventos</a></li>
+                <li><a id="eventsLink" href="#">Eventos</a></li>
                 <li><a href="#">|</a></li>
-                <li><a id="serviciosLink" href="#">Radio</a></li>
+                <li><a id="radioLink" href="#">Radio</a></li>
             </ul>
 
             <ul class="pull-right">
