--- a/source/index.html
+++ b/source/index.html
@@ -38,7 +38,9 @@
 
         <div class="slide" id="eventsSlider">
             <div class="jumbotron" id="events">
-
+                <div class="contenidoEvents">
+                        <img src="newsMercadoChino.jpeg" width=100% height=100%>
+                </div>
             </div>
         </div>
 
@@ -83,7 +85,7 @@
                 <li><a href="#">|</a></li>
                 <li><a id="bandasLink" href="#">Bands</a></li>
                 <li><a href="#">|</a></li>
-                <li><a id="eventsLink" href="#">Eventos</a></li>
+                <li><a id="eventsLink" href="#">Gaceta</a></li>
                 <li><a href="#">|</a></li>
                 <li><a id="radioLink" href="#">Radio</a></li>
             </ul>
